fixed overlapping of elements

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ body {
 .login {
     text-align: center;
     margin-left: -395px;  
+    padding: 0;
+    border: 2px solid blue;
+    position: relative;
+    z-index: 10;
+    
 }
 
 .login input[type="text"] {
@@ -99,6 +104,8 @@ body {
     position: absolute;
     bottom: -60px;
     left: 0;
+    border: 2px solid green;
+    z-index: 1;
     
    
 }
@@ -111,12 +118,16 @@ body {
 
 
 
+
+
 .cell-pic {
     position: absolute;
     top: -15px;
     right: 0;
     padding: 0;
     margin: 0;
+    border: 2px solid red;
+    z-index: 1;
    
 
 }
